Juego buscaminas - muestra tablero css

--- a/arrays.html
+++ b/arrays.html
@@ -3,12 +3,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<link type="text/css" rel="stylesheet" href="css/stylesheet.css" />
 		<title>Práctica con matrices</title>
-		<script type="text/javascript" src="js/matriz.js">	
-
-		</script>
 	</head>
 	<body>
 		<p>Práctica con matrices</p>
+
+		<script type="text/javascript" src="js/matriz.js"> </script>
+
 	</body>
 </html>
