--- a/arrays.html
+++ b/arrays.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Ejercicio de matrices con juego tipo buscaminas --->
+<!-- Ejercicio de matrices con juego tipo buscaminas -->
 <html>
 	<head>
 		<meta charset="utf-8" />
