--- a/pokemon_2.html
+++ b/pokemon_2.html
@@ -11,7 +11,7 @@
 	<h2 id="nombrePokemon">Pokemon de prueba</h2>
 	<p  id="datosPokemon">Datos de prueba</p>
 
-	<a  id="refPokemon" target="_blank" href=""><img src="" id="imgPokemon" alt="Enlace Wiki pokemon"/>
+	<a  id="refPokemon" target="_blank" href="enlace"><img src="" id="imgPokemon" alt="Enlace Wiki pokemon"/>
 	</a>
 
 	<script type="text/javascript" src="js/sel_pokemon.js"></script>
